[metadata]
name = openlb
author = Jianing Yang 
author-email = jianing.yang@gmail.com
summary = A Software Load Balancer Mangement
license = Apache-2
classifier =
    Development Status :: 1 - Planning
        Environment :: Web Environment
        Framework :: Flask
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python

[files]
packages =
    openlb
data_files =

[entry_points]
console_scripts =
    openlb-frontend = openlb.frontend.cmd:main
    openlb-db-manage = openlb.models.migration.cli:main
